[CFAUtils] Apply refaster patch